[package]
name = "beeper"
version = "0.1.0"
authors = ["Colin Roberts <colin@autoparallel.xyz>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp32c6-hal = { version = "0.8.0", features = [
    "async",
    "embassy",
    "embassy-executor-thread",
    "embassy-time-timg0",
] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32c6",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.0", default-features = false, features = [
    "esp32c6",
    "critical-section",
    "colors",
    "jtag-serial",
    "log",
] }
esp-alloc = "0.3.0"
embedded-hal-async = "1.0.0"
embassy-executor = "0.5.0"
embassy-time = "0.3.0"
embassy-futures = "0.1.1"
